# CPM

./: .gitignore  README.md
.claude/: settings.local.json
backend/: main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py  simulation.py
backend/app/models/: causal.py  rul.py
backend/app/services/: asset_service.py  feature_service.py
backend/tests/: test_api.py
cpp_feature_extractor/: CMakeLists.txt
cpp_feature_extractor/bindings/: pybind_module.cpp
cpp_feature_extractor/include/: feature_extractor.hpp
cpp_feature_extractor/src/: feature_extractor.cpp  main.cpp
cpp_feature_extractor/tests/: test_features.cpp
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/assets/[id]/: page.tsx
frontend/app/galaxy/: page.tsx
frontend/components/charts/: FFTChart.tsx  RULGauge.tsx  TimeSeriesChart.tsx  TrajectoryChart.tsx
frontend/components/dashboard/: AssetCard.tsx  CausalPanel.tsx  FeatureInspector.tsx  RiskDistribution.tsx  StatsCards.tsx
frontend/components/three/: HealthGalaxy.tsx
frontend/components/ui/: badge.tsx  progress.tsx
frontend/lib/: api.ts  mock-data.ts  utils.ts
